--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -246,5 +246,7 @@ ManageShortcutsPanel.saveError=Error storing shortcuts
 ManageShortcutsPanel.invalidShortcuts=Please ensure all shortcuts contain query text and shortcuts are unique and contain no whitespace.
 ManageShortcutsPanel.validation.uniqueName=The shortcut text for this entry already exists.\nShortcut text must be unique and contain no whitespace.
 ManageShortcutsPanel.validation.whitespace=Shortcut text must be unique and contain no whitespace.
+action.user-manager-command=User Manager
+action.grant-manager-command=Grant Manager
 
 
