--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -489,3 +489,7 @@ DockedTabPane.menuItem.minimizeAll=Minimize All
 ScrollingTabPane.menuItem.close=Close
 ScrollingTabPane.menuItem.closeAll=Close All
 ScrollingTabPane.menuItem.closeOther=Close Others
+action.create-database-command=Create Database
+action.create-database-command.description=Create Database
+action.user-manager-command.description=User manager
+action.grant-manager-command.description=Grant manager
