--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -305,4 +305,8 @@ DockedTabPane.menuItem.minimizeAll=Уменьшить все
 ScrollingTabPane.menuItem.close=Закрыть
 ScrollingTabPane.menuItem.closeAll=Закрыть все
 ScrollingTabPane.menuItem.closeOther=Закрыть другие
+action.create-database-command=Создать базу данных
+action.create-database-command.description=Создать базу данных
+action.user-manager-command.description=Модуль управления пользователями
+action.grant-manager-command.description=Модуль управления привилегиями
 
