--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -400,40 +400,7 @@ export also allows for a single file for all tables within separate.
 # ---
 # package: org.executequery.gui.editor
 
-AddQueryBookmarkPanel.okButton=Save
-AddQueryBookmarkPanel.cancelButton=Cancel
 
-AddQueryBookmarkPanel.bookmarkName=Name:
-AddQueryBookmarkPanel.query=SqL Query:
-
-AddQueryBookmarkPanel.saveError=Error storing bookmark for query
-AddQueryBookmarkPanel.validation.name=Please enter a name for this bookmark
-AddQueryBookmarkPanel.validation.query=Please enter the SQL query to be stored \
-against this bookmark
-AddQueryBookmarkPanel.validation.uniqueName=The name for this bookmark already \
-exists.\nWould you like to overwrite the existing bookmark value?
-
-ManageBookmarksPanel.bookmarks=Bookmarks:
-ManageBookmarksPanel.newBookmarkName=New Bookmark
-ManageBookmarksPanel.okButton=Save
-ManageBookmarksPanel.cancelButton=Cancel
-ManageBookmarksPanel.move=Move
-ManageBookmarksPanel.saveError=Error storing bookmarks
-ManageBookmarksPanel.invalidBookmarks=Please ensure all bookmarks contain \
-query text and bookmark names are unique.
-ManageBookmarksPanel.validation.uniqueName=The name for this bookmark already \
-exists.\nBookmark names must be unique.
-
-ManageShortcutsPanel.shortcuts=Shortcuts:
-ManageShortcutsPanel.newShortcutName=shortcut-text
-ManageShortcutsPanel.okButton=Save
-ManageShortcutsPanel.cancelButton=Cancel
-ManageShortcutsPanel.saveError=Error storing shortcuts
-ManageShortcutsPanel.invalidShortcuts=Please ensure all shortcuts contain \
-query text and shortcuts are unique and contain no whitespace.
-ManageShortcutsPanel.validation.uniqueName=The shortcut text for this entry already \
-exists.\nShortcut text must be unique and contain no whitespace.
-ManageShortcutsPanel.validation.whitespace=Shortcut text must be unique and contain no whitespace.
 
 
 
@@ -493,3 +460,44 @@ action.create-database-command=Create Database
 action.create-database-command.description=Create Database
 action.user-manager-command.description=User manager
 action.grant-manager-command.description=Grant manager
+UserManagerPanel.UserManager=User Manager
+UserManagerPanel.database=database
+UserManagerPanel.server=server
+UserManagerPanel.Add=Add
+UserManagerPanel.Edit=Edit
+UserManagerPanel.Delete=Delete
+UserManagerPanel.Refresh=Refresh
+UserManagerPanel.Users=Users
+UserManagerPanel.Roles=Roles
+UserManagerPanel.Membership=Membership
+UserManagerPanel.UserName=User name
+UserManagerPanel.Password=Password
+UserManagerPanel.Role=Role
+UserManagerPanel.FirstName=First name
+UserManagerPanel.MiddleName=Middle name
+UserManagerPanel.LastName=Last name
+UserManagerPanel.AddUser=Add user
+UserManagerPanel.EditUser=Edit user
+UserManagerPanel.AddRole=Add role
+UserManagerPanel.message.confirm-delete-user=Are you sure that you want to delete user?
+UserManagerPanel.message.confirm-delete-role=Are you sure that you want to delete role 
+UserManagerPanel.RoleName=Role name
+UserManagerPanel.Owner=Owner
+UserManagerPanel.message.create-role=Success
+UserManagerPanel.error.create-role=Error of create role\nSystem returned: \n
+
+WindowAddUser.UserName=User Name
+WindowAddUser.Password=Password
+WindowAddUser.ConfirmPassword=Confirm Password
+WindowAddUser.FirstName=First Name
+WindowAddUser.MiddleName=Middle Name
+WindowAddUser.LastName=Last Name
+WindowAddUser.UserID=User ID
+WindowAddUser.GroupID=Group ID
+WindowAddUser.Description=Description
+WindowAddUser.OK=OK
+WindowAddUser.Cancel=Cancel
+WindowAddUser.error.empty-pwd=Password can not be empty
+WindowAddUser.error.pwds-not-match=Passwords do not match
+WindowAddUser.error.empty-name=Username can not be empty
+
