--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -309,4 +309,43 @@ action.create-database-command=Создать базу данных
 action.create-database-command.description=Создать базу данных
 action.user-manager-command.description=Модуль управления пользователями
 action.grant-manager-command.description=Модуль управления привилегиями
+UserManagerPanel.UserManager=Менеджер пользователей
+UserManagerPanel.database=База данных
+UserManagerPanel.server=Сервер
+UserManagerPanel.Add=Добавить
+UserManagerPanel.Edit=Редактировать
+UserManagerPanel.Delete=Удалить
+UserManagerPanel.Refresh=Обновить
+UserManagerPanel.Users=Пользователи
+UserManagerPanel.Roles=Роли
+UserManagerPanel.Membership=Членство
+UserManagerPanel.UserName=Имя пользователя
+UserManagerPanel.FirstName=Фамилия
+UserManagerPanel.MiddleName=Имя
+UserManagerPanel.LastName=Отчество
+UserManagerPanel.AddUser=Добавить пользователя
+UserManagerPanel.EditUser=Редактировать пользователя
+UserManagerPanel.AddRole=Добавить роль
+UserManagerPanel.message.confirm-delete-user=Вы уверены, что хотите удалить пользователя
+UserManagerPanel.message.confirm-delete-role=Вы уверены, что хотите удалить роль 
+UserManagerPanel.RoleName=Имя роли
+UserManagerPanel.Owner=Вдаделец
+UserManagerPanel.message.create-role=Роль создана
+UserManagerPanel.error.create-role=Ошибка создания роли\nСистема вернула:\n
+WindowAddUser.UserName=Имя пользователя
+WindowAddUser.Password=Пароль
+WindowAddUser.ConfirmPassword=Потверждение пароля
+WindowAddUser.FirstName=Фамилия
+WindowAddUser.MiddleName=Имя
+WindowAddUser.LastName=Отчество
+WindowAddUser.UserID=ID пользователя
+WindowAddUser.GroupID=ID группы
+WindowAddUser.Description=Комментарий
+WindowAddUser.OK=OK
+WindowAddUser.Cancel=Отмена
+WindowAddUser.error.empty-pwd=Пароль не может быть пустым
+WindowAddUser.error.pwds-not-match=Пароли не совпадают
+WindowAddUser.error.empty-name=Имя пользователя не может быть пустым
+UserManagerPanel.Role=Роль
+UserManagerPanel.Password=Пароль
 
