--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -329,7 +329,7 @@ UserManagerPanel.AddRole=Добавить роль
 UserManagerPanel.message.confirm-delete-user=Вы уверены, что хотите удалить пользователя
 UserManagerPanel.message.confirm-delete-role=Вы уверены, что хотите удалить роль 
 UserManagerPanel.RoleName=Имя роли
-UserManagerPanel.Owner=Вдаделец
+UserManagerPanel.Owner=Владелец
 UserManagerPanel.message.create-role=Роль создана
 UserManagerPanel.error.create-role=Ошибка создания роли\nСистема вернула:\n
 WindowAddUser.UserName=Имя пользователя
