The event of closing and opening tabs GrantManager and UserManager was processed

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -501,3 +501,4 @@ WindowAddUser.error.empty-pwd=Password can not be empty
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.error.empty-name=Username can not be empty
 
+GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
