--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -348,4 +348,5 @@ WindowAddUser.error.pwds-not-match=Пароли не совпадают
 WindowAddUser.error.empty-name=Имя пользователя не может быть пустым
 UserManagerPanel.Role=Роль
 UserManagerPanel.Password=Пароль
+GrantManagerPanel.message.terminate-grant=Вы уверены, что хотите прервать процесс назначения привилегий?
 
