added progress bar in user manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -485,6 +485,7 @@ UserManagerPanel.RoleName=Role name
 UserManagerPanel.Owner=Owner
 UserManagerPanel.message.create-role=Success
 UserManagerPanel.error.create-role=Error of create role\nSystem returned: \n
+UserManagerPanel.cancelButton=Cancel waiting fill
 
 WindowAddUser.UserName=User Name
 WindowAddUser.Password=Password
