--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -155,6 +155,7 @@ action.execute-object.description=View and execute stored procedures and functio
 action.compare-data-types.description=Compare data types across different database products
 
 
+
 # -------------------------------------------------------------
 # menus
 # -------------------------------------------------------------
@@ -503,3 +504,23 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.error.empty-name=Username can not be empty
 
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
+GrantManagerPanel.GrantManager=Grant Manager
+GrantManagerPanel.Object=Object
+GrantManagerPanel.Field=Field
+GrantManagerPanel.Type=Type
+GrantManagerPanel.Users=Users
+GrantManagerPanel.Roles=Roles
+GrantManagerPanel.Views=Views
+GrantManagerPanel.Triggers=Triggers
+GrantManagerPanel.Procedures=Procedures
+GrantManagerPanel.AllObjects=All Objects
+GrantManagerPanel.Tables=Tables
+GrantManagerPanel.DisplayAll=Display All
+GrantManagerPanel.GrantedOnly=Granted Only
+GrantManagerPanel.Non-grantedOnly=Non-granted Only
+GrantManagerPanel.InvertFilter=Invert Filter
+GrantManagerPanel.ShowSystemTables=Show System Tables
+GrantManagerPanel.ColumnsOf=Columns Of 
+GrantManagerPanel.CancelFill=Cancel waiting fill 
+GrantManagerPanel.GrantsOn=Grants On
+GrantManagerPanel.PrivelegesFor=Privileges For
