--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -6,22 +6,22 @@
 
 # common labels
 common.ok.button=OK
-common.save.button=Save
 common.save-as.button=Save As
 common.clear.button=Clear
 common.apply.button=Apply
 common.close.button=Close
-common.print.button=Print
 common.select.button=Select
 common.cancel.button=Cancel
-common.help.button=Help
-common.copy.button=Copy
 common.create.button=Create
 common.generate.button=Generate
-common.delete.button=Delete
 common.add.button=Add
 common.send.button=Send
 common.finish.button=Finish
+common.copy.button=Копировать
+common.delete.button=Удалить
+common.help.button=Справка
+common.print.button=Печать
+common.save.button=Сохранить
 
 # -------------------------------------------------------------
 # actions
@@ -149,11 +149,11 @@ action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
 action.visit-eq-command.description=Открывает executequery.org в браузере
 action.visit-eq-command=Посетить executequery.org
-common.copy.button=Копировать
-common.delete.button=Удалить
-common.help.button=Справка
-common.print.button=Печать
-common.save.button=Сохранить
+action.create-database-command=Создать базу данных
+action.create-database-command.description=Создать базу данных
+action.user-manager-command.description=Модуль управления пользователями
+action.grant-manager-command.description=Модуль управления привилегиями
+
 
 
 # -------------------------------------------------------------
@@ -305,10 +305,6 @@ DockedTabPane.menuItem.minimizeAll=Уменьшить все
 ScrollingTabPane.menuItem.close=Закрыть
 ScrollingTabPane.menuItem.closeAll=Закрыть все
 ScrollingTabPane.menuItem.closeOther=Закрыть другие
-action.create-database-command=Создать базу данных
-action.create-database-command.description=Создать базу данных
-action.user-manager-command.description=Модуль управления пользователями
-action.grant-manager-command.description=Модуль управления привилегиями
 UserManagerPanel.UserManager=Менеджер пользователей
 UserManagerPanel.database=База данных
 UserManagerPanel.server=Сервер
@@ -350,4 +346,23 @@ UserManagerPanel.Role=Роль
 UserManagerPanel.Password=Пароль
 GrantManagerPanel.message.terminate-grant=Вы уверены, что хотите прервать процесс назначения привилегий?
 UserManagerPanel.cancelButton=Отменить ожидание
-
+GrantManagerPanel.GrantManager=Менеджер прав
+GrantManagerPanel.Object=Объект
+GrantManagerPanel.Field=Поле
+GrantManagerPanel.GrantsOn=Привилегии
+GrantManagerPanel.PrivelegesFor=Получатели привилегий
+GrantManagerPanel.Type=Тип
+GrantManagerPanel.Users=Пользователи
+GrantManagerPanel.Roles=Роли
+GrantManagerPanel.Views=Представления
+GrantManagerPanel.Triggers=Триггеры
+GrantManagerPanel.Procedures=Процедуры
+GrantManagerPanel.AllObjects=Все объекты
+GrantManagerPanel.Tables=Таблицы
+GrantManagerPanel.DisplayAll=Показывать все
+GrantManagerPanel.GrantedOnly=Только с правами
+GrantManagerPanel.Non-grantedOnly=Только без прав
+GrantManagerPanel.InvertFilter=Инвертировать фильтр
+GrantManagerPanel.ShowSystemTables=Показывать системные таблицы
+GrantManagerPanel.ColumnsOf=Поля для 
+GrantManagerPanel.CancelFill=Отменить ожидание
