added Support Firbird 3+ to UserManager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -499,6 +499,12 @@ WindowAddUser.GroupID=Group ID
 WindowAddUser.Description=Description
 WindowAddUser.OK=OK
 WindowAddUser.Cancel=Cancel
+WindowAddUser.Tags=Tags
+WindowAddUser.tag=Tag
+WindowAddUser.value=Value
+WindowAddUser.active=Active
+WindowAddUser.addTag=Add Tag
+WindowAddUser.deleteTag=Delete Tag
 WindowAddUser.error.empty-pwd=Password can not be empty
 WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.error.empty-name=Username can not be empty
