--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -366,3 +366,9 @@ GrantManagerPanel.InvertFilter=Инвертировать фильтр
 GrantManagerPanel.ShowSystemTables=Показывать системные таблицы
 GrantManagerPanel.ColumnsOf=Поля для 
 GrantManagerPanel.CancelFill=Отменить ожидание
+WindowAddUser.Tags=Метки
+WindowAddUser.tag=Метка
+WindowAddUser.value=Значение
+WindowAddUser.active=Активный
+WindowAddUser.deleteTag=Удалить метку
+WindowAddUser.addTag=Добавить метку
