Corrected bug with removing connections

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -510,6 +510,7 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.error.empty-name=Username can not be empty
 
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
+GrantManagerPanel.message.notConnected=No connections available!
 GrantManagerPanel.GrantManager=Grant Manager
 GrantManagerPanel.Object=Object
 GrantManagerPanel.Field=Field
