--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -372,3 +372,4 @@ WindowAddUser.value=Значение
 WindowAddUser.active=Активный
 WindowAddUser.deleteTag=Удалить метку
 WindowAddUser.addTag=Добавить метку
+GrantManagerPanel.message.notConnected=Нет доступных подключений!
