Processed Exceptions in Grant Manager and User Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -531,3 +531,4 @@ GrantManagerPanel.ColumnsOf=Columns Of
 GrantManagerPanel.CancelFill=Cancel waiting fill 
 GrantManagerPanel.GrantsOn=Grants On
 GrantManagerPanel.PrivelegesFor=Privileges For
+GrantManagerPanel.connection.close=Connection Close!
