--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -373,3 +373,4 @@ WindowAddUser.active=Активный
 WindowAddUser.deleteTag=Удалить метку
 WindowAddUser.addTag=Добавить метку
 GrantManagerPanel.message.notConnected=Нет доступных подключений!
+GrantManagerPanel.connection.close=Соединение прервано!
