Added support plugins and Administrator Role in User Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -504,6 +504,8 @@ WindowAddUser.tag=Tag
 WindowAddUser.value=Value
 WindowAddUser.active=Active
 WindowAddUser.addTag=Add Tag
+WindowAddUser.Administrator=Administrator
+WindowAddUser.Plugin=Plugin
 WindowAddUser.deleteTag=Delete Tag
 WindowAddUser.error.empty-pwd=Password can not be empty
 WindowAddUser.error.pwds-not-match=Passwords do not match
