--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -130,6 +130,7 @@ action.clear-recent-files-command=Clear recent files list
 action.customise-tool-bars-command=Customise
 action.customise-query-editor-command=Query Editor Options
 action.feedback-command=Feedback
+action.comparerDB-command=Comparer DB
 
 # action descriptions (tips)
 action.new-command.description=Open a New Editor
@@ -153,6 +154,7 @@ action.export-resultset-command.description=Execute SQL SELECT statements writin
 action.execute-sql-script-command.description=Open and execute an SQL script
 action.execute-object.description=View and execute stored procedures and functions
 action.compare-data-types.description=Compare data types across different database products
+action.comparerDB-command.description=Compares objects from two databases
 
 
 
@@ -534,3 +536,5 @@ GrantManagerPanel.CancelFill=Cancel waiting fill
 GrantManagerPanel.GrantsOn=Grants On
 GrantManagerPanel.PrivelegesFor=Privileges For
 GrantManagerPanel.connection.close=Connection Close!
+
+ComparerDBPanel.ComparerDB=Comparer DB
