Auto stash before rebase of "origin/master"

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -170,6 +170,8 @@ action.to-underscore-command=Нижнее подчеркивание
 action.to-upper-case-command=Верхний регистр
 action.toggle-autocommit-command=Переключение автофиксации
 action.toggle-editor-output-command=Показать/Скрыть редактор вывода
+action.user-manager-command=Менеджер пользователей 
+action.grant-manager-command=Менеджер прав 
 action.undo-command.description=Отмена последнего действия
 action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
