Replaced Execute Query to Red Expert

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -81,7 +81,7 @@ action.cut-command=Вырезать
 action.database-disconnect-command.description=Закрыть текущее подключение к базе данных 
 action.database-disconnect-command=Закрыть подключение
 action.delete-row-command=Удалить выделенный столбец в таблице
-action.donate-command.description=Отправить финансовую поддержку для продолжения разработки Execute Query
+action.donate-command.description=Отправить финансовую поддержку для продолжения разработки Red Expert
 action.donate-command=Поддержать разработчика
 action.drop-object-command=Удалить выделенный объект
 action.duplicate-row-down-command=Дублировать текст внизу
@@ -131,7 +131,7 @@ action.import-connections-command=Импорт подключений
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
-action.license-command.description=Лицензия к данному выпуску Execute Query
+action.license-command.description=Лицензия к данному выпуску Red Expert
 action.license-command=Лицензия
 action.manage-bookmarks-command=Уравление закладками запросов
 action.manage-shortcuts-command=Управление горячими клавишами запросов
@@ -175,8 +175,8 @@ action.grant-manager-command=Менеджер прав
 action.undo-command.description=Отмена последнего действия
 action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
-action.visit-eq-command.description=Открывает executequery.org в браузере
-action.visit-eq-command=Посетить executequery.org
+action.visit-eq-command.description=Открывает red-soft.biz в браузере
+action.visit-eq-command=Посетить red-soft.biz
 action.create-database-command=Создать базу данных
 action.create-database-command.description=Создать базу данных
 action.user-manager-command.description=Модуль управления пользователями
@@ -657,7 +657,7 @@ BrowserTreeRootPopupMenu.SortConnections=Сортировка подключен
 BrowserTreeRootPopupMenu.NewFolder=Новая папка
 BrowserTreeRootPopupMenu.searchNodes=Поиск узлов...
 
-BrowserViewPanel.JobName=Execute Query - Браузер баз данных
+BrowserViewPanel.JobName=Red Expert - Браузер баз данных
 
 CatalogPanel.catalogName=Имя каталога
 CatalogPanel.AvailableSchemas=Доступные схемы
