--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -128,7 +128,7 @@ action.create-table-command=Create Table
 action.generate-scripts-command=Generate SQL Scripts
 action.help-command=Help Topics
 action.about-command=About
-action.visit-eq-command=Visit executequery.org online
+action.visit-eq-command=Visit red-soft.biz online
 action.donate-command=Make a Donation
 action.check-update-command=Check for Update
 action.editor-command=Query Editor
@@ -165,8 +165,8 @@ action.new-command.description=Open a New Editor
 action.close-selected-tab-1.description=Closes the selected central tab component
 action.close-selected-tab-2.description=Closes the selected central tab component
 action.save-command.description=Save an open document
-action.release-notes-command.description=Execute Query version release notes
-action.license-command.description=Execute Query release license
+action.release-notes-command.description=Red Expert version release notes
+action.license-command.description=Red Expert release license
 action.redo-command.description=Redo the last action
 action.undo-command.description=Undo the last action
 action.goto-command.description=Go to line number...
@@ -175,8 +175,8 @@ action.create-index-command.description=Create a new database table index
 action.create-table-command.description=Create a new database table
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.help-command.description=Displays the help topics
-action.visit-eq-command.description=Opens executequery.org in a browser window
-action.donate-command.description=Make a donation to support the continued development of Execute Query
+action.visit-eq-command.description=Opens red-soft.biz in a browser window
+action.donate-command.description=Make a donation to support the continued development of Red Expert
 action.heap-memory-command.description=Virtual machine heap size
 action.export-resultset-command.description=Execute SQL SELECT statements writing results direct to file
 action.execute-sql-script-command.description=Open and execute an SQL script
@@ -660,7 +660,7 @@ BrowserTreeRootPopupMenu.SortConnections=Sort Connections
 BrowserTreeRootPopupMenu.NewFolder=New Folder
 BrowserTreeRootPopupMenu.searchNodes=Search Nodes...
 
-BrowserViewPanel.JobName=Execute Query - Database Browser
+BrowserViewPanel.JobName=Red Expert - Database Browser
 
 CatalogPanel.catalogName=Catalog Name:
 CatalogPanel.AvailableSchemas=Available Schemas
