Conflicts on the ConnectionPanel are resolved

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -686,13 +686,15 @@ ConnectionPanel.passwordField.tool-tip=Login password
 ConnectionPanel.ShowPassword=Show Password
 ConnectionPanel.ShowPassword.tool-tip=Show the password in plain text
 ConnectionPanel.hostField.tool-tip=Server host name or IP address
-ConnectionPanel.hostField=Host Name:
+ConnectionPanel.hostField=Server(Host) Name(IP):
 ConnectionPanel.portField=Port:
 ConnectionPanel.portField.tool-tip=Database port number
-ConnectionPanel.sourceField=Data Source:
+ConnectionPanel.sourceField=Database File:
 ConnectionPanel.sourceField.tool-tip=Data source name
 ConnectionPanel.urlField=JDBC URL:
 ConnectionPanel.urlField.tool-tip=The full JDBC URL for this connection (optional)
+ConnectionPanel.CharacterSet=Character Set:
+ConnectionPanel.Role=Role:
 ConnectionPanel.JDBCProperties=JDBC Properties
 ConnectionPanel.advPropsPanel.text1=Enter any key/value pair properties for this connection
 ConnectionPanel.advPropsPanel.text2=Refer to the relevant JDBC driver documentation for possible entries
@@ -703,6 +705,8 @@ ConnectionPanel.advTxPanel.Text1=Default transaction isolation level for this co
 ConnectionPanel.advTxPanel.Text2=Note: the selected isolation level will apply to ALL open connections of this type.
 ConnectionPanel.IsolationLevel=Isolation Level:
 ConnectionPanel.Basic=Basic
+ConnectionPanel.BasicAu=Basic
+ConnectionPanel.Standard=Standard
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.SSHTunnel=SSH Tunnel
 ConnectionPanel.selectDriver=Select...
@@ -724,6 +728,10 @@ ConnectionPanel.driverField.tool-tip=The JDBC driver to be used for this databas
 ConnectionPanel.addNewDriver=New Driver
 ConnectionPanel.delete.tool-tip=Clear this key/value pair
 ConnectionPanel.error.disconnect=Error disconnecting from data source:\n
+ConnectionPanel.ConnectionParameters=Connection parameters:
+ConnectionPanel.ConnectionParameters.tool-tip=Specify connection parameters or JDBC string
+ConnectionPanel.ChooseFile=Choose file
+ConnectionPanel.Authentication=Authentication:
 
 ConnectionsListPanel.AvailableConnections=Available Connections
 ConnectionsListPanel.label1=User defined database connection parameters.
