Added Dialog of Executing Statement

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -808,3 +808,15 @@ GrantManagerPanel.PrivelegesFor=Privileges For
 GrantManagerPanel.connection.close=Connection Close!
 
 ComparerDBPanel.ComparerDB=Comparer DB
+
+ExecuteQueryDialog.operator=SQL Statement
+ExecuteQueryDialog.error=SQL Returned
+ExecuteQueryDialog.copyQuery=Copy Statement
+ExecuteQueryDialog.copyError=Copy SQL Return
+ExecuteQueryDialog.commit=Commit
+ExecuteQueryDialog.rollback=Rollback
+
+
+
+
+
