--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -754,3 +754,9 @@ ConnectionPanel.Standard=Стандартно
 ConnectionPanel.ChooseFile=Выбрать файл
 ConnectionPanel.Authentication=Аутенфикация:
 ConnectionPanel.BasicAu=Базовая
+ExecuteQueryDialog.operator=SQL Выражение
+ExecuteQueryDialog.error=SQL Ответ
+ExecuteQueryDialog.copyQuery=Копировать выражение
+ExecuteQueryDialog.copyError=Копировать SQL ответ
+ExecuteQueryDialog.commit=Подтвердить
+ExecuteQueryDialog.rollback=Откатить
