Added the ability to delete objects and create tables
See #16108

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -617,6 +617,7 @@ BrowserTreeFolderPopupMenu.SortConnections=Sort Connections
 BrowserTreePopupMenu.connect=Connect
 BrowserTreePopupMenu.disconnect=Disconnect
 BrowserTreePopupMenu.reload=Reload
+BrowserTreePopupMenu.create=Create
 BrowserTreePopupMenu.recycle Recycle this Connection
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
 BrowserTreePopupMenu.addNewConnection=New Connection
@@ -651,6 +652,7 @@ BrowserTreePopupMenuActionListener.importXml=Import XML
 BrowserTreePopupMenuActionListener.ExportData=Export Data
 BrowserTreePopupMenuActionListener.exportXml=Export XML
 BrowserTreePopupMenuActionListener.exportExcel=Export Excel Spreadsheet
+BrowserTreePopupMenuActionListener.temporaryInconvenience=This section is under construction. Sorry for the temporary inconvenience
 
 BrowserTreeRootPopupMenu.NewConnection=New Connection
 BrowserTreeRootPopupMenu.DeleteFolder=Delete Folder
