--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -760,3 +760,5 @@ ExecuteQueryDialog.copyQuery=Копировать выражение
 ExecuteQueryDialog.copyError=Копировать SQL ответ
 ExecuteQueryDialog.commit=Подтвердить
 ExecuteQueryDialog.rollback=Откатить
+BrowserTreePopupMenu.create=Создать
+BrowserTreePopupMenuActionListener.temporaryInconvenience=Данный раздел находится в разработке. Извините за временные неудобства
