Added Dialog of creating generator

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -125,6 +125,7 @@ action.sql-history-command=SQL Command History
 action.execute-at-cursor-command=Execute at Cursor
 action.create-index-command=Create Index
 action.create-table-command=Create Table
+action.create-sequence-command=Create Sequence
 action.generate-scripts-command=Generate SQL Scripts
 action.help-command=Help Topics
 action.about-command=About
@@ -173,6 +174,7 @@ action.goto-command.description=Go to line number...
 action.database-disconnect-command.description=Close the database connection associated with the current selection
 action.create-index-command.description=Create a new database table index
 action.create-table-command.description=Create a new database table
+action.create-sequence-command.description=Create a new database sequence
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.help-command.description=Displays the help topics
 action.visit-eq-command.description=Opens red-soft.biz in a browser window
