--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -181,6 +181,8 @@ action.create-database-command=Создать базу данных
 action.create-database-command.description=Создать базу данных
 action.user-manager-command.description=Модуль управления пользователями
 action.grant-manager-command.description=Модуль управления привилегиями
+action.create-sequence-command=Создать генератор
+action.create-sequence-command.description=Создать новый генератор базы данных
 
 
 
