added support for multiple operations in ExecuteQueryDialog

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -819,6 +819,7 @@ ExecuteQueryDialog.copyQuery=Copy Statement
 ExecuteQueryDialog.copyError=Copy SQL Return
 ExecuteQueryDialog.commit=Commit
 ExecuteQueryDialog.rollback=Rollback
+ExecuteQueryDialog.listActions=List Actions
 
 
 
