--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -764,3 +764,4 @@ ExecuteQueryDialog.commit=Подтвердить
 ExecuteQueryDialog.rollback=Откатить
 BrowserTreePopupMenu.create=Создать
 BrowserTreePopupMenuActionListener.temporaryInconvenience=Данный раздел находится в разработке. Извините за временные неудобства
+ExecuteQueryDialog.listActions=Список действий
