--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -133,7 +133,7 @@ action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
 action.license-command.description=Лицензия к данному выпуску Red Expert
 action.license-command=Лицензия
-action.manage-bookmarks-command=Уравление закладками запросов
+action.manage-bookmarks-command=Управление закладками запросов
 action.manage-shortcuts-command=Управление горячими клавишами запросов
 action.map-erd-command=ER-диаграмма базы данных
 action.move-row-down-command=Сдвинуть текст вниз
