Added support creating view

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -126,6 +126,7 @@ action.execute-at-cursor-command=Execute at Cursor
 action.create-index-command=Create Index
 action.create-table-command=Create Table
 action.create-sequence-command=Create Sequence
+action.create-view-command=Create View
 action.generate-scripts-command=Generate SQL Scripts
 action.help-command=Help Topics
 action.about-command=About
@@ -175,6 +176,7 @@ action.database-disconnect-command.description=Close the database connection ass
 action.create-index-command.description=Create a new database table index
 action.create-table-command.description=Create a new database table
 action.create-sequence-command.description=Create a new database sequence
+action.create-view-command.description=Create a new database view
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.help-command.description=Displays the help topics
 action.visit-eq-command.description=Opens red-soft.biz in a browser window
