--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -765,3 +765,5 @@ ExecuteQueryDialog.rollback=Откатить
 BrowserTreePopupMenu.create=Создать
 BrowserTreePopupMenuActionListener.temporaryInconvenience=Данный раздел находится в разработке. Извините за временные неудобства
 ExecuteQueryDialog.listActions=Список действий
+action.create-view-command=Создать представление
+action.create-view-command.description=Создать новое представление базы данных
