Added texts for components of function panel to localization resources

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -520,6 +520,8 @@ BrowserProcedurePanel.procedure-name=Procedure Name:
 BrowserProcedurePanel.system-string-function=Database System String Function
 BrowserProcedurePanel.system-numeric-function=Database System Numeric Function
 BrowserProcedurePanel.system-date-function=Database System Date/Time Function
+BrowserFunctionPanel.function-name=Function Name:
+BrowserFunctionPanel.function=Database Function
 BrowserTableEditingPanel.table-indexes=Table Indexes
 BrowserTableEditingPanel.alter-table=Alter Table
 BrowserTableEditingPanel.create-table=Create Table
