--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -546,6 +546,7 @@ BrowserTreeFolderPopupMenu.SortConnections=Sort Connections
 BrowserTreePopupMenu.connect=Connect
 BrowserTreePopupMenu.disconnect=Disconnect
 BrowserTreePopupMenu.create=Create
+BrowserTreePopupMenu.edit=Edit
 BrowserTreePopupMenu.reload=Reload {0}
 BrowserTreePopupMenu.recycle Recycle this Connection
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
