Corrected visit red-soft.ru online

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -126,7 +126,7 @@ action.create-view-command=Create View
 action.generate-scripts-command=Generate SQL Scripts
 action.help-command=Help Topics
 action.about-command=About
-action.visit-eq-command=Visit red-soft.biz online
+action.visit-eq-command=Visit red-soft.ru online
 action.donate-command=Make a Donation
 action.check-update-command=Check for Update
 action.editor-command=Query Editor
@@ -174,7 +174,7 @@ action.create-sequence-command.description=Create a new database sequence
 action.create-view-command.description=Create a new database view
 action.generate-scripts-command.description=Generates SQL CREATE TABLE scripts
 action.help-command.description=Displays the help topics
-action.visit-eq-command.description=Opens red-soft.biz in a browser window
+action.visit-eq-command.description=Opens red-soft.ru in a browser window
 action.donate-command.description=Make a donation to support the continued development of Red Expert
 action.heap-memory-command.description=Virtual machine heap size
 action.export-resultset-command.description=Execute SQL SELECT statements writing results direct to file
