--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -170,8 +170,8 @@ action.grant-manager-command=Менеджер прав
 action.undo-command.description=Отмена последнего действия
 action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
-action.visit-eq-command.description=Открывает red-soft.biz в браузере
-action.visit-eq-command=Посетить red-soft.biz
+action.visit-eq-command.description=Открывает red-soft.ru в браузере
+action.visit-eq-command=Посетить red-soft.ru
 action.create-database-command=Создать базу данных
 action.create-database-command.description=Создать базу данных
 action.user-manager-command.description=Модуль управления пользователями
