Provided support localisation for edited objects

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -734,8 +734,25 @@ ExecuteQueryDialog.copyError=Copy SQL Return
 ExecuteQueryDialog.commit=Commit
 ExecuteQueryDialog.rollback=Rollback
 ExecuteQueryDialog.listActions=List Actions
-
-
-
-
-
+AbstractCreateObjectPanel.type=Type
+AbstractCreateObjectPanel.default-value=Default Value
+AbstractCreateObjectPanel.check=Check
+AbstractCreateObjectPanel.description=Description
+AbstractCreateObjectPanel.SQL=SQL
+AbstractCreateObjectPanel.text=Text
+AbstractCreateObjectPanel.computed=Computed By
+AbstractCreateObjectPanel.table=Table
+AbstractCreateObjectPanel.active=Active
+CreateGeneratorPanel.start-value=Start Value
+CreateGeneratorPanel.increment=Increment
+CreateIndexPanel.ascending=ASCENDING
+CreateIndexPanel.descending=DESCENDING
+CreateIndexPanel.unique=Unique
+CreateIndexPanel.fields=Fields
+CreateIndexPanel.sorting=Sorting
+CreateTriggerPanel.table-trigger=Table trigger
+CreateTriggerPanel.database-trigger=Database trigger
+CreateTriggerPanel.DDL-trigger=DDL trigger
+CreateTriggerPanel.position=Position
+CreateTriggerPanel.event=Event
+CreateTriggerPanel.before-after=Before/After
