Provided support localisation names of nodes

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -736,3 +736,27 @@ CreateTriggerPanel.DDL-trigger=DDL триггер
 CreateTriggerPanel.position=Позиция
 CreateTriggerPanel.event=Событие
 CreateTriggerPanel.before-after=До/После
+NamedObject.FUNCTION=ФУНКЦИИ
+NamedObject.INDEX=ИНДЕКСЫ
+NamedObject.PROCEDURE=ПРОЦЕДУРЫ
+NamedObject.SEQUENCE=ГЕНЕРАТОРЫ
+NamedObject.SYNONYM=СИНОНИМЫ
+NamedObject.SYSTEM_TABLE=СИСТЕМНЫЕ ТАБЛИЦЫ
+NamedObject.TABLE=ТАБЛИЦЫ
+NamedObject.TRIGGER=ТРИГГЕРЫ
+NamedObject.VIEW=ПРЕДСТАВЛЕНИЯ
+NamedObject.SYSTEM_FUNCTIONS=СИСТЕМНЫЕ ФУНКЦИИ
+NamedObject.GLOBAL_TEMPORARY=ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ
+NamedObject.DOMAIN=ДОМЕНЫ
+NamedObject.EXCEPTION=ИСКЛЮЧЕНИЯ
+NamedObject.EXTERNAL_FUNCTION=ВНЕШНИЕ ФУНКЦИИ
+NamedObject.SYSTEM_STRING_FUNCTIONS=СИСТЕМНЫЕ СТРОКОВЫЕ ФУНКЦИИ
+NamedObject.SYSTEM_NUMERIC_FUNCTIONS=СИСТЕМНЫЕ ЧИСЛОВЫЕ ФУНКЦИИ
+NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=СИСТЕМНЫЕ ВРЕМЕННЫЕ ФУНКЦИИ
+NamedObject.SYSTEM_VIEW=СИСТЕМНЫЕ ПРЕДСТАВЛЕНИЯ
+NamedObject.SYSTEM_DOMAIN=СИСТЕМНЫЕ ДОМЕНЫ
+NamedObject.SYSTEM_INDEX=СИСТЕМНЫЕ ИНДЕКСЫ
+NamedObject.SYSTEM_TRIGGER=СИСТЕМНЫЕ ТРИГГЕРЫ
+NamedObject.DATABASE_TRIGGER=ТРИГГЕРЫ БАЗЫ ДАННЫХ
+NamedObject.PACKAGE=ПАКЕТЫ
+NamedObject.ROLE=РОЛИ
