Changed External function to UDF

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -766,7 +766,7 @@ NamedObject.TRIGGER=TRIGGERS
 NamedObject.VIEW=VIEWS
 NamedObject.DOMAIN=DOMAINS
 NamedObject.EXCEPTION=EXCEPTIONS
-NamedObject.EXTERNAL_FUNCTION=EXTERNAL FUNCTIONS
+NamedObject.EXTERNAL_FUNCTION=UDF
 NamedObject.GLOBAL_TEMPORARY=GLOBAL TEMPORARIES
 NamedObject.SYSTEM_FUNCTIONS=SYSTEM FUNCTIONS
 NamedObject.SYSTEM_STRING_FUNCTIONS=SYSTEM STRING FUNCTIONS
