added import connections from ibexpert(database)

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -143,7 +143,8 @@ action.import-xml-command=Import from XML
 action.export-xml-command=Export to XML
 action.preferences-command=Preferences
 action.connect-command=New Connection
-action.import-connections-command=Import Connections
+action.import-connections-from-file-command=Import Connections from file
+action.import-connections-from-DB-command=Import Connections from DB
 action.export-connections-command=Export Connections
 action.console-command=System Console Window
 action.export-excel-command=Export to Excel Spreadsheet
@@ -222,6 +223,7 @@ menu.view.query-editor.status-bar=Status Bar
 menu.view.query-editor.line-numbers=Line Numbers
 menu.database=Database
 menu.database.connections=Connections...
+menu.database.connections.import=Import Connections 
 menu.database.generate-erd=Generate ERD
 menu.tools=Tools
 menu.tools.import-data=Import Data
