fixed bugs: 1.fixed icons for triggers 2.fixed system functions(deleted node system functions) 3.fixed translating gtt

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -751,7 +751,7 @@ NamedObject.TABLE=ТАБЛИЦЫ
 NamedObject.TRIGGER=ТРИГГЕРЫ
 NamedObject.VIEW=ПРЕДСТАВЛЕНИЯ
 NamedObject.SYSTEM_FUNCTIONS=СИСТЕМНЫЕ ФУНКЦИИ
-NamedObject.GLOBAL_TEMPORARY=ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ
+NamedObject.GLOBAL_TEMPORARY=ГЛОБАЛЬНЫЕ ВРЕМЕННЫЕ ТАБЛИЦЫ
 NamedObject.DOMAIN=ДОМЕНЫ
 NamedObject.EXCEPTION=ИСКЛЮЧЕНИЯ
 NamedObject.EXTERNAL_FUNCTION=ВНЕШНИЕ ФУНКЦИИ
